package nl.han.oose.jellema.rick.resourcelayer;
public interface ITokenDealer {
    String aquireToken();
}
